--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html class="bg-black">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Findmeds</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+<link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+<script src="https://cdn.tailwindcss.com"></script>
 </head>
-
-<body>
-    <h1>welcome</h1>
+<body class="bg-black text-white">
+  <header class="w-screen h-18 bg-black border-white border-b-2">
+    <div class="navbar bg-black">
+        <div class="navbar-start">
+          <div class="dropdown">
+            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-5 w-5"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M4 6h16M4 12h8m-8 6h16" />
+              </svg>
+            </div>
+            <ul
+              tabindex="0"
+              class="menu menu-sm dropdown-content bg-black rounded-box z-[1] mt-3 w-52 p-2 shadow">
+              <li><a href="hospitals.html">Hospitals</a></li>
+              <li><a href="email.htm">Email Filter</a></li>
+              <li><a href="ngo.html">NGOs</a></li>
+              <li><a href="stories.html">Stories that made us</a></li>
+              <li><a href="about.html">About Us</a></li>
+            </ul>
+          </div>
+          <a class="btn btn-ghost text-xl" href="index.html"><img class="h-10" src="logo black bg.png" alt="logo">FinMeds</a>
+        </div>
+        <div class="navbar-center hidden lg:flex">
+          <ul class="menu menu-horizontal px-1">
+            <li><a href="hospitals.html">Hospitals</a></li>
+            <li><a href="email.htm">Email Filter</a></li>
+            <li><a href="ngo.html">NGOs</a></li>
+            <li><a href="stories.html">Stories that made us</a></li>
+            <li><a href="about.html">About Us</a></li>
+          </ul>
+        </div>
+        <div class="navbar-end">
+          <a class="btn">Button</a>
+        </div>
+      </div>
+  </header>
 </body>
-
 </html>
